# defog

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
defog/: __init__.py  admin_methods.py  async_admin_methods.py  local_metadata_extractor.py  local_storage.py  mcp_server.py
defog/llm/: __init__.py  citations.py  llm_providers.py  orchestrator.py  utils.py  utils_function_calling.py  utils_mcp.py  web_search.py  youtube.py
docs/: README.md  api-reference.md  llm-utilities.md
docs/advanced/: README.md  agent-orchestration.md
docs/data-extraction/: README.md
docs/database/: README.md
tests/: conftest.py  test_anthropic_caching_pricing.py  test_anthropic_e2e_caching.py  test_anthropic_mid_conversation_system.py  test_anthropic_server_tools.py  test_anthropic_server_tools_e2e.py  test_anthropic_task_budget.py  test_citations.py  test_code_interp.py  test_conversation_cache_hook.py  test_cost_calculator.py  test_deepseek.py  test_image_support.py  test_json_repair.py  test_llm.py  test_llm_pause_resume.py  test_llm_post_response_hook.py  test_llm_pre_model_call_hook.py  test_llm_response.py  test_llm_tool_calls.py  test_mcp_chat_async.py  test_memory.py  test_openai_gpt55_e2e.py  test_openrouter.py  test_openrouter_choices_validation.py  test_openrouter_provider_routing.py  test_post_response_hook.py  test_programmatic_tool_calling.py  test_schema_documenter.py  test_text_data_extractor.py  test_tool_budget.py  test_tool_citations.py  test_tool_error_no_retry.py  test_web_search.py  test_youtube.py  test_zai.py
(+38 files in other folders)
